# moneyflow

./: .evn_example  .gitignore  Cargo.toml  README.md  build.rs
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-3213b3873e185acd951460fd362e665dba61f0f3d4897c3c961eb0035d353709.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-a794936ee83e3033356677b9017dc00d2bd5abcb118930816e052b523ee118bc.json  query-bc7b6e2047d10327f7495c821749257cfed5e16b285910d38e23495b39bf8a60.json
config/: default.toml  dev.toml  prod.toml
migrations/: 20250330105511_create_user_table.sql
src/: configuration.rs  lib.rs  main.rs  routers.rs  server.rs
src/controllers/: auth.rs  index.rs  mod.rs  profile.rs
src/database/: auth.rs  profile.rs
src/middleware/: auth.rs
src/models/: user.rs
src/utils/: helper.rs
src/validator/: authvalidator.rs  mod.rs  profile.rs
