[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "moneyflow"
path = "src/main.rs"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio", 
    "postgres",
    "tls-rustls",
    "chrono",
] }

dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
# smol = "2.0.2"
